--- a/8.0.2/config/Preferences/org/netbeans/modules/autoupdate.properties
+++ b/8.0.2/config/Preferences/org/netbeans/modules/autoupdate.properties
@@ -5,7 +5,7 @@ fod-provider_lastCheckTime=1444088498311
 ideIdentity=NB_CND_EXTIDE_GFMOD_GROOVY_JAVA_JC_MOB_PHP_WEBCOMMON_WEBEE0d5fa8d80-34b3-40d8-abe5-dce2f3dfe9df
 imported=false
 lastCheckTime=1444088499177
-plugin.manager.first.class.modules=org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services
+plugin.manager.first.class.modules=org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services,org.netbeans.modules.autoupdate.services
 pluginportal-update-provider_lastCheckTime=1444088499177
 qualifiedId=NB_CND_EXTIDE_GFMOD_GROOVY_JAVA_JC_MOB_PHP_WEBCOMMON_WEBEE0d5fa8d80-34b3-40d8-abe5-dce2f3dfe9df_de2ae127-6a5b-46c9-8edb-bdbf47f33832
 superId=de2ae127-6a5b-46c9-8edb-bdbf47f33832
